# outlook-web

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: api.rs  browser.rs  config.rs  inspect.rs  lib.rs  list.rs  main.rs  menu.rs
