[package]
name = "outlook-web"
version = "0.1.0"
edition = "2024"

[lib]
name = "outlook_web"
path = "src/lib.rs"

[[bin]]
name = "outlook-web"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
open = "5"

[profile.release]
lto = true
strip = true
